style.css
        * {
        	margin: 0px;
        	padding: 0px;
        	font-family: Gabriola;
        }

        #contentWrapper {
            width: 800px;
            overflow-x: hidden;

        }

		.btn a {
			text-decoration: none;
			color: white;
			font-size: 22px;
			
		}
		.btn div {
			display: inline-block;
			margin-right: 11px;
			background: #C0262C;
			margin-left: 10px;
			width: 220px;
			height: 28px;
			text-align: center;
			vertical-align: middle;

			padding-bottom: 9px;
			margin-right: 10px;

		}
		.btn {
			margin-top: 35px;
		}
		.pto img {
			padding: 75px;
		}
		.gallery , .regstration {
			background:#006736; 
			height:31px;
			margin-top:60px;
			line-height: 31px;
		}
		.contact {
			width: 781px;
			height: 255px;
   			margin: 12px;
    		border: 1px solid gray;
	    	border-radius: 7px;
			
		}
		.contact table td input {
			width: 270px;
			height: 31px;
			border-radius: 4px;
			border: 1px solid gray;
			font-family: ariel;
			font-size: 18px;
			color: black;
		}
		.contact table td textarea {
			border-radius: 4px;
			border: 1px solid gray;
			height: 135px;
			font-family: ariel;
			font-size: 18px;
			color: black;

		}
		.contact table tr td div{
			padding: 0px 17px 0px 24px;
			font-size: 22px;

		}
		.contact  table td {
			padding: 0px 46px 0px 46px;
		}
		.gallery p , .regstration p {
			color: white;
			font-size: 23px;
			margin-left: 15px;
		}

		.polaroid{
            border: 1px solid #cccccc;
            display: inline-block;
            margin-right: 5px;
            padding: 8px;
            box-shadow: 6px 6px 15px -8px;
            text-align: center;
            margin: -15px;
            margin-top: 0px;
            margin-left: 0px;
            width: auto;
            background-color: #fff;
            position: relative;
            z-index: 0;
            transition-duration: 0.4s;
            transition-timing-function: ease;
            -webkit-transition-duration: 0.4s;
            -webkit-transition-timing-function: ease;
            -moz-transition-duration: 0.4s;
            -moz-transition-timing-function: ease;
            -ms-transition-duration: 0.4s;
            -ms-transition-timing-function: ease;
            -o-transition-duration: 0.4s;
            -o-transition-timing-function: ease;
        }
        .polaroid img {
            width: auto;
        }

        .polaroid .caption {
            overflow: hidden;
            white-space: nowrap;
        }
        .collage {
            margin-top: 10px;
        }
        .polaroid div p {
            color: black;
        }
		.photo {
			margin-top: 10px;
		}
		

